fix / bugs shared z-index

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -3,6 +3,7 @@ header {
   width: 100%;
   position: sticky;
   top: 0;
+  z-index: 1000;
 
   nav {
     display: flex;
